--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "jquery-mask-plugin": "^1.14.16"
   }
 }
