--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,5 +20,8 @@
         "webpack": "^5.99.8",
         "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.1"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.6"
     }
 }
