--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
         "concurrently": "^9.0.1",
         "css-loader": "^7.1.2",
         "laravel-vite-plugin": "^1.2.0",
+        "sass": "^1.88.0",
+        "sass-loader": "^16.0.5",
         "style-loader": "^4.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4",
